--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "alembic==1.12.0",
     "psycopg[binary]<4.0.0,>=3.1.13",
     "httpx==0.25.0",
+    "yfinance>=0.2.31",
     "python-jose==3.3.0",
     "passlib==1.7.4",
     "python-multipart==0.0.6",
@@ -25,6 +26,7 @@ dependencies = [
     "aioredis==2.0.1",
     "python-dotenv==1.0.0",
     "pytest==7.4.0",
+    "pandas>=2.0.0",
 ]
 
 [project.optional-dependencies]
