--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,22 +1,25 @@
-# 数据库设置
-# 数据库类型: "sqlite" 或 "postgresql"
+# Database settings
+# Database type: "sqlite" or "postgresql"
 DB_TYPE=sqlite
-SQLITE_DB_FILE=stock_reason.db
+DB_FILENAME=stock_reason.db
 
-# PostgreSQL设置 (仅当DB_TYPE=postgresql时使用)
-POSTGRES_SERVER=localhost
+# PostgreSQL settings (only used when DB_TYPE=postgresql)
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=stock_reason
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
 
-# Redis设置 (可选)
+# Redis settings (optional)
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_DB=0
 REDIS_PASSWORD=
+REDIS_DB=0
 
-# CORS设置
-BACKEND_CORS_ORIGINS=["http://localhost:3000", "http://localhost:8080"]
+# CORS settings
+CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 
-# 其他设置
-DEBUG=True 
+# Other settings
+SECRET_KEY=your_secret_key_here
+ACCESS_TOKEN_EXPIRE_MINUTES=60
+API_KEY_ALPHA_VANTAGE=your_alpha_vantage_api_key 
