--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,33 +1,36 @@
-# Python特定
+# Python specific
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
-.pytest_cache/
-.coverage
-htmlcov/
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+# We want to track uv.lock to ensure consistent dependency versions
+!uv.lock
 
-# uv
-.uv/
-
-# 我们希望追踪uv.lock以确保依赖版本一致
-# uv.lock
-
-# 数据库
+# Database
 *.db
 *.sqlite
 *.sqlite3
 
-# 日志
+# Logs
 logs/
 *.log
 
-# 本地配置
-local_settings.py
+# Local configuration
+.env
 
-# Alembic版本
-# 注意：通常我们需要追踪alembic的迁移文件
+# Alembic versions
+# Note: We usually need to track alembic migration files
+# alembic/versions/
 
-# 临时文件
-temp/
-tmp/ 
+# Temporary files
+*.tmp
+*.bak 
