--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,36 +1,43 @@
-# 依赖
+# Dependencies
 /node_modules
 /.pnp
 .pnp.js
 
-# 测试
+# Testing
 /coverage
 
-# 生产构建
+# Production build
 /build
 /dist
 
-# 杂项
+# Misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# 日志
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# 编辑器
-.idea/
-.vscode/
-*.swp
-*.swo
+# Editors
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Cache
+.eslintcache
 
 # TypeScript
 *.tsbuildinfo
 
-# 缓存
+# Cache
 .cache/
 .parcel-cache/ 
